test/tests/stages/18_structures/invalid_types/extra_credit/union_struct_conflicts/conflicting_tag_declarations.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: x
        Bool: 0
        List[0]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: x
        Bool: 1
        List[0]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
